@@ -1,4 +1,5 @@
 2.nov (ws)
+      - fix #7766 space or hypen in lyrics causes crash
       - more code for tablature editing with mouse; fixes #7769
 1.nov (ws)
       - fix #7614: menu item crash when continuing session with no scores
